# monster-battle-engine

./: MANIFEST.in  README.md  setup.cfg
monster-battle-engine/: __main__.py
monster-battle-engine/lib/: monster.py
tests/: monster-battle-engine_test.py
